--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,18 @@
 {
-    "configurations": [
-        {
-            "type": "chrome",
-            "name": "http://localhost:3000/",
-            "request": "launch",
-            "url": "http://localhost:3000/"
-        }
-    ]
+  "name": "Edge",
+  "type": "pwa-msedge",
+  "request": "launch",
+  "url": "http://localhost:3000",
+  "webRoot": "${workspaceFolder}/src",
+  "sourceMapPathOverrides": {
+    "webpack:///src/*": "${webRoot}/*"
+  },
+  "configurations": [
+    {
+      "type": "chrome",
+      "name": "http://localhost:3000/login",
+      "request": "launch",
+      "url": "http://localhost:3000/login"
+    }
+  ]
 }
